fixed layout issues with master/detail; added data for recipeTypes

--- a/scale-ui/app/styles/components/aisRecipe.less
+++ b/scale-ui/app/styles/components/aisRecipe.less
@@ -72,12 +72,12 @@
 
     .col-graph {
         width: 100%;
-        height: 66.5vh;
+        height: 58vh;
         //border: #ccc 1px solid;
         //border-radius: 5px;
 
         &.new-recipe {
-            height: 61vh;
+            height: 55vh;
         }
 
         &.panel-default {
